# mini_cuda_rtc

./: .gitignore  CMakeLists.txt  README.md  array.h  baseclass.h  runtime_compiler.cu  simple_rtc.cpp  simple_rtc_nvcc.cu
src/: array-impl.h  array.h  array_gather-impl.h  array_gather.h  array_like.cpp  array_like.h  array_reference.h  compiler.cpp  compiler.h  config.h.in  device.cu  device.h  dimension.cpp  dimension.h  functor.h  kernels.h  make_message.cpp  make_message.h  simple_rtc_nvcc.cu  timer.cpp  timer.h
